2006-10-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PATCH_LEVEL): bump version.

	* lily/spacing-spanner.cc (musical_column_spacing): handle
	musical->nonmusical spacing case, where there is no spacing
	wish. Fixes issue #61.

	* lily/pango-font.cc (text_stencil): allow 'tight' bounds.
	(pango_item_string_stencil): use logical rect horizontally (to
	preserve spaces), ink_rect vertically (for time signatures).

	* lily/font-metric.cc (word_stencil): new interface function

	* input/regression/utf-8-mixed-text.ly: new file.

	* lily/percent-repeat-engraver.cc (listen_percent): remove
	spurious warning.

	* lily/phrasing-slur-engraver.cc (acknowledge_script): only ack
	non-dynamic scripts. Fixes #30.

	* lily/slur.cc (outside_slur_callback): make offset_scm optional.

	* lily/beam.cc (rest_collision_callback): make prev_offset optional.

	* lily/grob-closure.cc (chain_offset_callback): don't pass 0 but
	SCM_UNDEFINED for non-existent data.

	* lily/side-position-interface.cc (general_side_position): allow
	optional current_offset argument for chaining, so combinations of side-position
	and outside slur callback don't add up.  Fixes issue #92.

	* lily/pango-font.cc (pango_item_string_stencil): use
	logical_rect. This prevents spaces after words from disappearing,
	issue #72.
	
	* VERSION: release 2.9.20

2006-10-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-grob-properties.scm (all-user-grob-properties):
	mention stencil as user settable.

2006-10-02  Joe Neeman  <joeneeman@gmail.com>

	* Documentation/user/page.itely (Page formatting): 
	document auto-first-page-number

	* lily/page-breaking.cc (find_chunks_and_breaks): 
	* lily/paper-score.cc (calc_breaking): Follow changes to the
	Constrained_breaking interface

	* lily/constrained-breaking.cc (calc_subproblem): run the main loop
	here backwards, as an optimisation
	(initialize): new function; move most of the code in resize () here
	(combine_demerits): cache ragged_right_